--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </section>
 
         <div class="p-5 text-center">
-            <p class="text-warning">© Alan D Daniels</p>
+            <p class="text-warning">© Akumlong Imsong</p>
         </div>
         
         <script src="index.js"></script>
